tests/paczka1/fuzzy1/87321922.err
Error in line 2: aYv A98 36,6
Error in line 1: QNI7Lw4nOt2 A909 47,7
Error in line 5: QNI7Lw4nOt2 A98 52,4
Error in line 6: QNI7Lw4nOt2 A909 71,8
Error in line 13: Q1CuESYz A336 68,4
Error in line 27: Q1CuESYz A909 52,28
Error in line 29: A336 A98 -5,8
Error in line 30: aYv A808 25,9
Error in line 28: E5bv1V A909 8,9
Error in line 23: Q1CuESYz A909 31,5
